[package]
name = "i2pd-rs"
version = "0.1.0"
authors = ["Jack Lund <jackl@geekheads.net>"]

[dependencies]
bincode = "0.6.1"
clap = "2.20.5"
log = "0.3.6"
log4rs = "0.6.2"
mockers_macros = "0.5.7"
rustc-serialize = "*"
rust-ini = { git = "https://github.com/jacklund/rust-ini.git" }
time = "0.1.36"
vec_map   = "0.7.0"
walkdir = "1.0.7"
yaml-rust = "0.3.5"

[dev-dependencies]
mockers = "0.5.7"